--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,12 @@
-name: foodgram
+name: foodgram-project-react workflow
 
 on: [push]
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@main
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - run: pip install -r requirements.txt
-    - run: pytest
-    - run: pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+  build_backend:
+    name: Push Docker backend image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -33,34 +21,77 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./backend/
+          context: backend
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project-react
+
+  build_frontend:
+    name: Push Docker frontend image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: frontend
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project-react
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs:
+      - build_backend
+      - build_frontend
+    if:
+      contains('
+        refs/heads/main
+        refs/heads/master
+      ', github.ref)
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
+          username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
           stack_file_name: docker-compose.yaml
           script: |
+            cd infra
+            echo ${{ secrets.DOCKER_PASSWORD }} | sudo docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-project-react
+
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-project-react
             sudo docker-compose stop
-            sudo docker-compose rm -f web
-            sudo docker-compose up -d --build
+            sudo docker-compose rm web
+            touch .env
+            echo SENTRY_DNS=${{ secrets.SENTRY_DNS }} >> .env
+            echo DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d
+            sudo docker-compose exec web python manage.py makemigrations users
+            sudo docker-compose exec web python manage.py makemigrations recipes
+            sudo docker-compose exec -T web python manage.py migrate --noinput
+            sudo docker-compose exec -T web python manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+    - name: send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: ${{ github.workflow }} успешно выполнен!
