--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-      - run: pip install -r foodgram/requirements.txt
+      - run: pip install -r requirements.txt
       - run: pytest
       - run: pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
 
