Первая попытка сдать вторую часть

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ../frontend/:/app/result_build/
 
   backend:
-    image: viksan29/foodgram
+    image: viksan29/foodgram_backend
     restart: always
     volumes:
       - static_value:/app/static/
