--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,20 @@
-name: Foodgram
+name: foodgram_backend
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - run: python -m pip install --upgrade pip
       - run: pip install -r requirements.txt
       - run: pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
 
