--- a/main.yml
+++ b/main.yml
@@ -1,21 +1,20 @@
-name: Foodgram
+name: foodgram_backend
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - run: python -m pip install --upgrade pip
       - run: pip install -r requirements.txt
       - run: pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
 
@@ -36,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,7 +49,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
