--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./api_yamdb/
+          context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
 
   deploy:
