--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
 
-  web:
+  backend:
     image: viksan29/foodgram_backend
     restart: always
     volumes:
@@ -19,16 +19,25 @@ services:
     env_file:
       - ./.env
 
+  frontend:
+    image: viksan29/foodgram_frontend
+    volumes:
+      - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html
+      - ../docs/:usr/share/ngnix/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/app/media/
+    restart: always
     depends_on:
-      - web
+      - backend
+      - frontend
 
 volumes:
   postgres_data:
