--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - run: pip install -r requirements.txt
       - run: pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
 
-  build_and_push_to_docker_hub:
+  build_backend:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -35,12 +35,34 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./backend/
+          context: backend
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
+
+  build_frontend:
+    name: Push Docker frontend image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: frontend
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs:
+      - build_backend
+      - build_frontend
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -51,6 +73,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
