--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,10 @@
-# build env
-FROM node:13.12.0-alpine as build
+FROM python:3.8-slim
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
+
+COPY requirements.txt .
+
+RUN pip3 install -r requirements.txt --no-cache-dir
+
 COPY . ./
-RUN npm run build
-CMD cp -r build result_build
+
+CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8000" ]
