--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
         with:
           python-version: '3.8'
       - run: python -m pip install --upgrade pip
-      - run: pip install -r requirements.txt
+      - run: pip install -r ../requirements.txt
       - run: pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
 
   build_backend:
-    name: Push Docker image to Docker Hub
+    name: Push Docker backend image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
