--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
 
-  backend:
+  web:
     image: viksan29/foodgram_backend
     restart: always
     volumes:
@@ -36,7 +36,7 @@ services:
       - media_value:/app/media/
     restart: always
     depends_on:
-      - backend
+      - web
       - frontend
 
 volumes:
