--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,7 @@
-FROM python:3.8-slim
+FROM node:13.12.0-alpine as build
 WORKDIR /app
-
-COPY requirements.txt .
-
-RUN pip3 install -r requirements.txt --no-cache-dir
-
-COPY . .
-
-CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
+COPY package*.json ./
+RUN npm install
+COPY . ./
+RUN npm run build
+CMD cp -r build result_build
