--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     env_file:
       - ./.env
 
-  web:
+  backend:
     image: viksan29/foodgram_backend
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/backend/static/
+      - media_value:/backend/media/
     depends_on:
       - db
     env_file:
@@ -32,11 +32,11 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html
       - ../docs/:usr/share/ngnix/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/app/media/
+      - ../static:/var/html/static/
+      - media_value:/var/html/media/
     restart: always
     depends_on:
-      - web
+      - backend
       - frontend
 
 volumes:
