--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -29,11 +29,10 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/var/html/static/
+      - ../docs/:usr/share/ngnix/html/api/docs/
+      - ../static:/var/html/static/
       - media_value:/var/html/media/
     restart: always
     depends_on:
