--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,6 @@ COPY requirements.txt .
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
-COPY . .
+COPY . ./
 
-CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8000" ]
+CMD gunicorn backend.wsgi:application --bind 0.0.0.0:8000
