--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,4 @@ RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY . ./
 
-CMD gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
