--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.8-slim
+FROM python:3.7-slim
+
 WORKDIR /backend
 
 COPY requirements.txt .
@@ -7,4 +8,4 @@ RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY . ./
 
-CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
+CMD ["gunicorn", "backend.wsgi:application", "--bind", "0:8000" ]
