--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: backend
+          context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
 
   build_frontend:
@@ -55,7 +55,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: frontend
+          context: ./frontend/
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
 
   deploy:
